Delete params function upload