@@ -1,14 +1,11 @@
 package org.example;
 
-import java.io.FileWriter;
-import java.io.IOException;
+import java.io.*;
 import java.lang.reflect.Parameter;
 import java.net.URISyntaxException;
+import java.net.URL;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
-import java.nio.file.StandardOpenOption;
+import java.nio.file.*;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
@@ -28,26 +25,47 @@ public class ParametersManager {
 
     public void addParameter(String parameter) throws IOException {
         HashSet<String> parametry = new HashSet<>(getAllParameters());
+        parametry.add(parameter);
 
-        if (!parametry.contains(parameter)){
-            Files.writeString(parametersPath, System.lineSeparator() + parameter, StandardOpenOption.APPEND);
-        } else {
-            System.out.println("Masz już zapisany podany parametr");
-        }
+        // Zapisanie zawartości zbioru do pliku "parametry.txt"
+        Files.write(parametersPath, parametry, StandardCharsets.UTF_8, StandardOpenOption.CREATE);
     }
 
-    // Funkcja usuwająca wszystkie parametry z pliku parametry.txt
 
-    public static void deleteParams(String parametry) {
+
+
+    // Funkcja usuwająca przenosząca plik parametry.txt do katalogu roboczego, tam dokonanie zmiany
+    // czyli wyczyszczenie pliku i następnie ponowne skopiowanie go do katalogu resources
+
+
+
+    public void deleteParams() throws IOException {
+        // Odczytanie ścieżki do pliku "parametry.txt" jako URL
+        URL resourceUrl = ParametersManager.class.getClassLoader().getResource("parametry.txt");
+        if (resourceUrl == null) {
+            System.err.println("Nie znaleziono pliku zasobu: parametry.txt");
+            return;
+        }
+        Path resourcePath;
         try {
-            FileWriter fileWriter = new FileWriter(parametry);
-            fileWriter.write(""); // Nadpisanie zawartości pliku pustym ciągiem znaków
-            fileWriter.close();
-            System.out.println("Zawartość pliku " + parametry + " została usunięta.");
-        } catch (IOException e) {
-            System.err.println("Wystąpił błąd podczas usuwania zawartości pliku: " + e.getMessage());
+            resourcePath = Paths.get(resourceUrl.toURI());
+        } catch (URISyntaxException e) {
+            System.err.println("Wystąpił błąd podczas pobierania ścieżki pliku: " + e.getMessage());
+            return;
         }
+
+        // Nadpisz zawartość pliku "parametry.txt" pustą zawartością
+        FileWriter fileWriter = new FileWriter(resourcePath.toFile());
+        fileWriter.write("");
+        fileWriter.close();
+
+        System.out.println("Parametry podróży zostały usunięte. Dodaj kolejne parametry na swoją kolejną podróż!");
     }
 
 
-    };
+
+
+
+
+
+};
